<resources>
    <plurals name="people">
        <item quantity="zero">%1$d человек</item>
        <item quantity="one">%1$d человека</item>
        <item quantity="two">%1d человека</item>
        <item quantity="few">%1$d человека</item>
        <item quantity="many">%1$d человек</item>а
        <item quantity="other">%1$d человека</item>
    </plurals>
    <string name="app_name">Знакомые</string>
    <string name="kith">Знакомые</string>
    <string name="our">Нас</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="Name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="middleName">Отчество</string>
    <string name="email">Эл. почта</string>
    <string name="phone">Телефон</string>
    <string name="refCode">Реферальный код</string>
    <string name="do_check_in">Зарегистрироваться</string>
    <string name="term_of_use">Я согласен с пользовательским соглашением и политикой конфиденциальности</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="term">Политика конфиденциальности</string>
    <string name="position">Сфера деятельности</string>
    <string name="description">Описание</string>
    <string name="label_main">Главная</string>
    <string name="button_exit">Выход</string>
    <string name="button_done">Готово</string>
    <string name="label_profile">Профиль</string>
    <string name="label_announcements">Сарафанное радио</string>
    <string name="label_messages">Сообщения</string>
    <string name="label_new_password">Новый пароль</string>
    <string name="edit">Редактировать</string>

    <string name="forgot_password">Забыли пароль?</string>

    <string name="signature">&#169; Знакомые 2020</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="button_cancel">Отмена</string>
    <string name="button_back">Назад</string>
    <string name="label_edit">Редактирование</string>
    <string name="button_ready">Готово</string>
    <string name="favorite">Избранное</string>
    <string name="board_info_owner">Владелец: %1$s</string>

    <string name="create_date">Создано: %1$s</string>
    <string name="organizer_phone">Телефон: %1$s</string>
    <string name="search">Поиск</string>
    <string name="kithCount">Количество знакомых:</string>
    <string name="share">Поделиться</string>
    <string name="comments">Написать</string>
    <string name="profile">Профиль</string>
    <string name="all">Все</string>
    <string name="my">Мои</string>
    <string name="confirm">Подтвердить</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="cost">Стоимость</string>
    <string name="title">Заголовок</string>
    <string name="password_recovery">Восстановление пароля</string>

    <!--Password recovery-->
    <string name="password_recovery_enter_login_or_email">Введите ваш логин или email</string>
    <string name="password_recovery_enter_login_or_email_hint">Логин или email</string>
    <string name="password_recovery_enter_confirmation_code">Введите полученный код</string>
    <string name="password_recovery_enter_confirmation_code_hint">Полученный код</string>
    <string name="password_recovery_reset_confirmation_code">Отправить код повторно</string>
    <string name="password_recovery_enter_new_password">Введите новый пароль</string>
    <string name="password_recovery_new_password_hint">Новый пароль</string>
    <string name="password_recovery_confirm_new_password_hint">Пароль повторно</string>
    <string name="password_recovery_next">Далее</string>
    <string name="password_recovery_change">Изменить</string>
    <string name="registration_phone_confirmation">Подтверждение телефона</string>

    <!--Registration-->
    <string name="registration_ref_code_hint">Реферальный код знакомого</string>

    <string name="registration_firstName">Имя*</string>
    <string name="registration_lastName">Фамилия*</string>
    <string name="registration_middleName">Отчество</string>
    <string name="registration_activity">Сфера деятельности</string>
    <string name="registration_next">Далее</string>
    <string name="registration_done">Готово</string>
    <string name="registration_email">Email*</string>
    <string name="registration_login">Логин*</string>
    <string name="registration_password">Пароль*</string>
    <string name="registration_doublePassword">Пароль повторно*</string>
    <string name="registration_country">Страна</string>
    <string name="registration_region">Регион</string>
    <string name="registration_city">Город</string>
    <string name="registration_phone">Телефон*</string>
    <string name="home_title">Знакомые</string>

    <!--Home-->
    <string name="home_menu_share">Поделиться</string>
    <string name="home_menu_search">Поиск</string>
    <string name="share_code_title">Реферальный код</string>

    <!--Share Code-->
    <string name="share_code_menu_share">Поделиться</string>
    <string name="profile_title">Профиль</string>

    <!--Profile-->
    <string name="profile_menu_exit">Выход</string>
    <string name="profile_menu_edit">Редактирование</string>
    <string name="edit_profile_title">Редактирование профиля</string>

    <!--Edit Profile-->
    <string name="change_password_title">Изменение пароля</string>
    <!--    <string name="profile_menu_exit">Выход</string>-->
    <!--    <string name="profile_menu_edit">Редактирование</string>-->

    <!--Change Password-->
    <string name="board_list_title">Объявления</string>
    <!--    <string name="profile_menu_exit">Выход</string>-->
    <!--    <string name="profile_menu_edit">Редактирование</string>-->

    <!--Board List-->
    <string name="board_list_menu_create_board">Создать объявление</string>
    <string name="board_list_date">%1$s руб.</string>
    <string name="board_info_title">Объявление</string>

    <!--Board Info-->
    <string name="board_info_menu_edit_board">Редактировать объявление</string>
    <string name="board_info_menu_options">Опции</string>
    <string name="board_info_menu_action_delete_board">Удалить</string>
    <string name="board_info_menu_action_archive_board">Архивировать</string>
    <string name="board_info_date">%1$s руб.</string>
    <string name="board_create_title">Создание объявления</string>

    <!--Create Board-->
    <string name="board_create_menu_done">Готово</string>
    <string name="board_info_comment_list_title">Комментарии</string>

    <!--Board Info List-->
    <string-array name="category">
        <item>Категория</item>
    </string-array>
</resources>
