<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/root"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <EditText
            android:id="@+id/email"
            style="@style/FieldLight"
            android:layout_marginTop="40dp"
            android:hint="@string/registration_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/double_password"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_doublePassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/next"
            android:layout_marginTop="40dp"
            android:text="@string/registration_next"
            style="@style/ButtonLight"/>

    </LinearLayout>

</layout>
