<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_board_info_edit_board"
        android:icon="@drawable/ic_edit"
        android:title="@string/board_list_menu_create_board"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_board_info_options"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="101"
        android:title="@string/board_info_menu_options"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_board_info_action_archive_board"
                android:title="@string/board_info_menu_action_archive_board"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_board_info_action_delete_board"
                android:title="@string/board_info_menu_action_delete_board"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

</menu>
