<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/root"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <com.project.scratchstudio.kith_andoid.custom_views.CustomAutoCompleteTextView
            android:id="@+id/country"
            style="@style/FieldLight"
            android:layout_marginTop="40dp"
            android:hint="@string/registration_country"
            android:inputType="text"
            android:completionThreshold="1"/>

        <com.project.scratchstudio.kith_andoid.custom_views.CustomAutoCompleteTextView
            android:id="@+id/region"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_region"
            android:inputType="text"
            android:visibility="gone" />

        <com.project.scratchstudio.kith_andoid.custom_views.CustomAutoCompleteTextView
            android:id="@+id/city"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_city"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/phone"
            style="@style/FieldLight"
            android:layout_marginTop="25dp"
            android:hint="@string/registration_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/next"
            android:layout_marginTop="40dp"
            android:text="@string/registration_done"
            style="@style/ButtonLight"/>

    </LinearLayout>

</layout>
