<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/CustomRecoveryPasswordCodeText"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery_enter_confirmation_code" />

        <EditText
            android:id="@+id/confirm_code"
            style="@style/FieldDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password_recovery_enter_confirmation_code_hint"/>

        <TextView
            android:id="@+id/reset_confirm_code"
            style="@style/CustomForgetPasswordText"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password_recovery_reset_confirmation_code" />

        <Button
            android:id="@+id/next"
            style="@style/ButtonDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password_recovery_next" />

    </LinearLayout>
</layout>