<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/CustomRecoveryPasswordCodeText"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/password_recovery_enter_new_password" />

        <EditText
            android:id="@+id/new_password"
            style="@style/FieldLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:hint="@string/password_recovery_new_password_hint"/>

        <EditText
            android:id="@+id/confirm_password"
            style="@style/FieldLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:hint="@string/password_recovery_confirm_new_password_hint"/>

        <Button
            android:id="@+id/next"
            style="@style/ButtonLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password_recovery_change" />

    </LinearLayout>
</layout>