<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.CheckInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button3">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/customFontTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_centerVertical="true"
            android:background="@drawable/circle" />

        <com.project.scratchstudio.kith_andoid.CustomViews.CustomFontTextView
            android:id="@+id/customFontTextView"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/view2"
            android:text="@string/kith"
            android:textColor="@color/colorAccent"
            android:textSize="23sp"
            customAttrs:customFont="jura" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customFontTextView4"
        app:layout_constraintVertical_bias="0.8">

        <ImageView
            android:id="@+id/portfolio"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/portfolio"
            android:src="@mipmap/person" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/portfolio"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-10dp"
            android:background="@drawable/button_plus"
            android:src="@drawable/ic_add" />

    </RelativeLayout>


    <com.project.scratchstudio.kith_andoid.CustomViews.CustomFontTextView
        android:id="@+id/customFontTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:text="@string/registration"
        android:textColor="@color/colorAccent"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        customAttrs:customFont="intro_regular" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customFontTextView4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/phone"
        android:inputType="phone"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/entry_field_check_in"
        android:hint="@string/refCode"
        android:inputType="text"
        android:lines="1"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        app:layout_constraintVertical_bias="0.727">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorDark" />

        <com.project.scratchstudio.kith_andoid.CustomViews.CustomFontTextView
            android:id="@+id/agree"
            android:autoLink="web"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/checkbox"
            android:text="@string/term_of_use"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            customAttrs:customFont="intro_regular" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>

</ScrollView>

<Button
android:id="@+id/button3"
    android:onClick="onClickCheckInButton"
android:layout_width="match_parent"
android:layout_height="60dp"
android:layout_marginTop="8dp"
android:background="@drawable/button_check_in"
android:text="@string/do_check_in"
android:textAllCaps="false"
android:textColor="@color/colorAccent"
android:textSize="20sp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
